syntax = "proto3";

package refund_info.v1;

option go_package = "shop-goframe-micro-service/app/order/api/refund_info/v1";

import "pbentity/refund_info.proto";

service refund_info {
  rpc GetList(RefundInfoGetListReq) returns (RefundInfoGetListRes) {}
  rpc GetDetail(RefundInfoGetDetailReq) returns (RefundInfoGetDetailRes) {}
  rpc Create(RefundInfoCreateReq) returns (RefundInfoCreateRes) {}
}

// 新增消息定义
message RefundInfoCreateReq {
  uint32                     UserId    = 1;  // 用户id
  uint32                     OrderId   = 2;  // 订单id
  uint32                     GoodsId   = 3;  // 要售后的商品id
  string                    Reason    = 4;  // 退款原因
}

message RefundInfoCreateRes {
  uint32 id = 1;
}

message RefundInfoGetDetailReq {
  uint32 id = 1;
}


message RefundInfoGetDetailRes {
  pbentity.RefundInfo data = 1;
}


message RefundInfoGetListReq {
  uint32 page = 1;
  uint32 size = 2;  // 修改：字段编号必须从1开始递增
}


message RefundInfoListResponse {
  repeated pbentity.RefundInfo list = 1;
  uint32 page = 2;
  uint32 size = 3;
  uint32 total = 4;
}

message RefundInfoGetListRes {
  RefundInfoListResponse data = 1;
}